--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
         crossorigin="anonymous"></script>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-    <link rel="icon" href="images/logo.png" type="image/x-icon">
+    <link rel="icon" href="/images/logo.png" type="image/x-icon">
     <style>
         html,
         body {
@@ -574,7 +574,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light fixed-top">
                 <div class="container-fluid">
-                    <img src="images/logo.png" width="40" alt="AgriSmart AI Logo" class="site-logo">
+                    <img src="/images/logo.png" width="40" alt="AgriSmart AI Logo" class="site-logo">
                     <a class="navbar-brand" href="/">AgriSmart AI</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
